fix: Fixes from read aloud QA (multiple stories)
- [PT-184631349] Remove read aloud for sequence link
- [PT-184631109] Fix z-index of read aloud toggle to not overlap sidebar content
- [PT-184631417] Fix unregistering of iframed components

Also removed separate require from dynamic-text/component to avoid duplicate
code as it also exists in the root dynamic-text module.

--- a/src/components/toggle.scss
+++ b/src/components/toggle.scss
@@ -68,7 +68,6 @@
       transition: all 0.3s;
       border-radius: 50%;
       cursor: pointer;
-      z-index: 1;
     }
 
     &:hover {
